# pylomena

./: .editorconfig  .gitignore  README.md  pyproject.toml  test.py  test.sh
.github/workflows/: deploy.yml  tests.yml
src/pylomena/: __init__.py  api.py  matcher.py  sites.py  types.py  utils.py
tests/: test_api.py  test_main.py  test_matcher.py  test_pylomena.py  test_sites.py
