[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pylomena"
version = "0.0.1"
authors = [
  { name="Flynn", email="flynnmlp@gmail.com" },
]
description = "Python client for accessing Philomena based imageboards"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]

dependencies = [
  "python-dateutil~=2.8.2",
  "requests~=2.27.1",
]

[project.optional-dependencies]
testing = [
  "flake8~=6.0.0",
  "Flake8-pyproject~=1.2.2",
  "mypy~=1.0.1",
  "types-python-dateutil~=2.8.19.6",
  "types-requests~=2.28.11.12",
]

[project.urls]
"Homepage" = "https://github.com/flynnmlp/pylomena"
"Bug Tracker" = "https://github.com/flynnmlp/pylomena/issues"

[tool.setuptools.package-data]
pylomena = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pylomena*"]  # ["*"] by default
#exclude = ["pylomena.tests*"]  # empty by default
#namespaces = false  # true by default

[tool.flake8]
ignore = ["W293", "W391"]
max-line-length = 120

