[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pylomena"
version = "0.0.3"
authors = [
  { name="Flynn", email="flynnmlp@gmail.com" },
]
description = "Python client for accessing Philomena based imageboards"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]

dependencies = [
  "python-dateutil~=2.8.2",
  "requests~=2.28.2",
  "levenshtein~=0.20.9",
]

[project.optional-dependencies]
all = [
  "pylomena[testing]",
]

testing = [
  "flake8>=5.0.4",
  "Flake8-pyproject~=1.2.2",
  "mypy~=1.0.1",
  "types-python-dateutil~=2.8.19.6",
  "types-requests~=2.28.11.12",
  "tox",
]

[project.urls]
"Homepage" = "https://github.com/flynnmlp/pylomena"
"Bug Tracker" = "https://github.com/flynnmlp/pylomena/issues"

[tool.setuptools.package-data]
pylomena = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pylomena*"]  # ["*"] by default
#exclude = ["pylomena.tests*"]  # empty by default
#namespaces = false  # true by default

[tool.flake8]
ignore = ["W293", "W391"]
max-line-length = 120
per-file-ignores = [
  "__init__.py:F401,F403",
]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.tox]
legacy_tox_ini = """
[tox]
minversion = 3.8.0
envlist = py37,py38,py39,py310,flake8
isolated_build = True

[gh-actions]
python =
  3.7: py37
  3.8: py38, flake8
  3.9: py39
  3.10: py310

[testenv]
setenv =
  PYTHONPATH = {toxinidir}
deps = .[testing]
commands =
  {envpython} tests/test_main.py
  mypy src tests

[testenv:flake8]
basepython = python3.8
commands =
  flake8 src tests
"""

